--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "pnpm -r dev"
   },
   "dependencies": {
-    "@splinetool/react-spline": "^4.1.0"
+    "@splinetool/react-spline": "^4.1.0",
+    "framer-motion": "^12.23.24"
   }
 }
