--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -37,7 +39,11 @@
     "tailwind-variants": "^2.1.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/js": "^9.33.0",
+    "@storybook/addon-docs": "^9.1.13",
+    "@storybook/react": "^9.1.13",
+    "@storybook/react-vite": "^9.1.13",
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
@@ -45,12 +51,15 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "chromatic": "^13.3.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "^9.1.13",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "react-router-dom": "^7.8.0",
+    "storybook": "^9.1.13",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
