--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@kiwicom/orbit-components": "^27.6.0",
     "@portabletext/react": "^4.0.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -32,7 +33,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@storybook/react": "^9.1.7",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/react": "^10.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -45,32 +47,34 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.7",
-    "storybook": "^9.1.10",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
+    "@chromatic-com/storybook": "^4.1.2",
     "@eslint/js": "^9.33.0",
-    "@storybook/addon-docs": "^9.1.13",
-    "@storybook/react": "^9.1.13",
-    "@storybook/react-vite": "^9.1.13",
+    "@storybook/addon-a11y": "^10.0.2",
+    "@storybook/addon-docs": "^10.0.2",
+    "@storybook/addon-vitest": "^10.0.2",
+    "@storybook/react-vite": "^10.0.2",
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/browser-playwright": "^4.0.5",
+    "@vitest/coverage-v8": "^4.0.5",
     "autoprefixer": "^10.4.21",
-    "chromatic": "^13.3.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.1.13",
+    "eslint-plugin-storybook": "^10.0.2",
     "globals": "^16.3.0",
+    "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "react-router-dom": "^7.8.0",
-    "storybook": "^9.1.13",
+    "storybook": "^10.0.2",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
