--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dev:web": "pnpm --filter web dev",
     "build:web": "pnpm --filter web build",
     "start:web": "pnpm --filter web preview",
+    "storybook": "storybook dev -p 6006 --prefix=apps/web",
+    "build-storybook": "storybook build --prefix=apps/web",
     "release": "semantic-release",
     "lint": "pnpm eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:fix": "pnpm eslint . --ext .js,.ts,.jsx,.tsx --fix",
@@ -65,7 +67,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-regexp": "^2.10.0",
-    "eslint-plugin-storybook": "^9.1.1",
     "husky": "^8.0.0",
     "is-ci": "^4.1.0",
     "lint-staged": "^16.1.5",
@@ -85,7 +86,6 @@
     "@sanity/client": "^7.11.2",
     "@sanity/image-url": "^1.2.0",
     "@splinetool/react-spline": "^4.1.0",
-    "@storybook/react": "^9.1.7",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.12.2",
     "express": "^5.1.0",
