--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "@vitest/browser-playwright": "^4.0.5",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -70,6 +71,7 @@
     "husky": "^8.0.0",
     "is-ci": "^4.1.0",
     "lint-staged": "^16.1.5",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "semantic-release": "^24.2.7",
     "stylelint": "^14.16.1",
@@ -79,7 +81,7 @@
     "ts-node": "^10.9.2",
     "turbo": "^2.5.4",
     "vite": "^7.1.6",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.5"
   },
   "dependencies": {
     "@google-cloud/recaptcha-enterprise": "^6.3.0",
